--- a/lwirth-lib/CMakeLists.txt
+++ b/lwirth-lib/CMakeLists.txt
@@ -4,7 +4,9 @@ file(GLOB_RECURSE lwirth-lib_SRC
 
 add_library(lwirth-lib STATIC ${lwirth-lib_SRC})
 
-target_link_libraries(lwirth-lib glfw3.lib vulkan-1.lib)
+find_package(vulkan REQUIRED)
+target_link_libraries(lwirth-lib Vulkan::Vulkan)
+target_link_libraries(lwirth-lib glfw)
 
 install(TARGETS lwirth-lib DESTINATION bin)
 install(FILES lwirth.hpp DESTINATION include)
