fixed many bugs to fix gcc errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,9 @@ set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
 if(WIN32)
-    set(Vulkan_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/windows/Lib32)
+    set(Vulkan_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/windows/Lib32/vulkan-1.lib)
     set(Vulkan_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/windows/Include)
-elseif(UNIX AND APPLE)
+elseif(APPLE)
     set(Vulkan_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/macOS/macOS/lib)
     set(Vulkan_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/macOS/macOS/include)
 endif()
