started CMake refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,28 +5,7 @@ set(lwirth_VERSION_MAJOR 1)
 set(lwirth_VERSION_MINOR 0)
 set(lwirth_VERSION_PATCH 0)
 
-set(EIGEN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libraries/eigen)
-
-set(GLFW_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libraries/glfw)
-set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-
-if(WIN32)
-    set(Vulkan_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/windows/Lib32/vulkan-1.lib)
-    set(Vulkan_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/windows/Include)
-elseif(APPLE)
-    set(VULKAN_SDK ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/macOS)
-    set(Vulkan_LIBRARY ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/macOS/macOS/lib/libvulkan.1.dylib)
-    set(Vulkan_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libraries/vulkan/macOS/macOS/include)
-endif()
-
-add_subdirectory(${GLFW_DIR})
-include_directories(${GLFW_DIR}/include)
-
-include_directories(${EIGEN_DIR}/include)
-
-include_directories(${STB_DIR}/include)
+add_subdirectory(libraries)
 
 
 # configure_file(${PROJECT_SOURCE_DIR}/lwirth.pc.in ${PROJECT_BINARY_DIR}/lwirth.pc) #or .h better?
