--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "environment": [],
             "externalConsole": true,
             "MIMode": "gdb",
-            "miDebuggerPath": "/usr/local/Cellar/gdb/8.2/bin/gdb",
+            "miDebuggerPath": "D:\\Dev\\compilers\\mingw\\bin\\gdb.exe", //"/usr/local/Cellar/gdb/8.2/bin/gdb"
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
