changes to CMake for macOS Vulkan

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -16,7 +16,7 @@ if(WIN32)
     set(Vulkan_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/libraries/vulkan/windows/Include" PARENT_SCOPE)
 elseif(APPLE)
     set(VULKAN_SDK "${PROJECT_SOURCE_DIR}/libraries/vulkan/macOS" PARENT_SCOPE)
-    set(Vulkan_LIBRARY "${PROJECT_SOURCE_DIR}/libraries/vulkan/macOS/macOS/lib/libvulkan.1.dylib" PARENT_SCOPE)
-    set(Vulkan_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/libraries/vulkan/macOS/macOS/include" PARENT_SCOPE)
+    set(Vulkan_LIBRARY "${PROJECT_SOURCE_DIR}/libraries/vulkan/macOS/MoltenVK/macOS/libMoltenVK.dylib" PARENT_SCOPE)
+    set(Vulkan_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/libraries/vulkan/macOS/MoltenVK/include" PARENT_SCOPE)
 endif()
 
