fixed two mistakes in CMakeLists

--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(EIGEN_DIR "${PROJECT_SOURCE_DIR}/libraries/eigen-git-mirror")
-add_subdirectory(${EIGEN_DIR})
+#add_subdirectory(${EIGEN_DIR})
 set(STB_DIR "${PROJECT_SOURCE_DIR}/libraries/stb" PARENT_SCOPE)
 
 set(GLFW_DIR "${PROJECT_SOURCE_DIR}/libraries/glfw")
