--- a/lwirth-testing/CMakeLists.txt
+++ b/lwirth-testing/CMakeLists.txt
@@ -5,7 +5,7 @@ find_package(vulkan REQUIRED)
 
 add_executable(lwirth-testing Main.cpp tests/UtilsTests.hpp)
 target_link_libraries(lwirth-testing lwirth-lib)
-target_link_libraries(lwirth-lib Eigen3::Eigen)
+target_link_libraries(lwirth-testing Eigen3::Eigen)
 target_link_libraries(lwirth-testing Vulkan::Vulkan)
 target_link_libraries(lwirth-testing glfw)
 
